# advent-of-code

./: .editorconfig  Cargo.toml  README.md  justfile
crates/aoc2025/: Cargo.toml
crates/aocctl/: Cargo.toml
crates/aocctl/src/: commands.rs  lib.rs  main.rs  prelude.rs  templates.rs  utils.rs
crates/aocctl/src/commands/: init.rs  input.rs  new.rs  open.rs  run.rs  solve.rs  status.rs  submit.rs
crates/aocctl/src/utils/: detect.rs  extract.rs  http.rs  input.rs
crates/aocctl/tests/: cli_parsing.rs
