[package]
authors.workspace = true
edition.workspace = true
name              = "aocctl"
version.workspace = true

[dependencies]
anyhow           = "1"
clap             = { version = "4", features = ["derive"] }
reqwest          = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde_urlencoded = "0.7"
