#:schema https://www.schemastore.org/cargo.json
[package]
authors.workspace = true
edition.workspace = true
name              = "aocctl"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
serde_urlencoded = "0.7"
